@@ -6,6 +6,12 @@ glibc (2.7-9) unstable; urgency=low
   * any/submitted-link-local_resolver.diff: kernel 2.6.24 is out, don't wait
     indefinitely for upstream. This patch from Pierre Ynard adds support for
     link-local addresses in /etc/resolv.conf.
+  * Factorize NSS detection code:
+    - debhelper.in/libc.preinst, debhelper.in/libc.postinst: move NSS code
+      to...
+    - script.in/nsscheck.sh: ... this file.
+    - rules.d/debhelper.mk: Replace NSS_CHECK with code from
+      script.in/nsscheck.sh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 19 Feb 2008 23:06:29 +0100
 
